--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/uuid": "^9.0.0",
+    "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.57.1",
+    "sweetalert2": "^11.6.16",
     "typescript": "^4.6.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
